fix issue with transition on safari

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -124,20 +124,24 @@ h2 {
     border-bottom: 1px solid bisque;
     font-size: 18px;
     margin: 20px;
+    overflow: hidden;
 }
 
-.form-control::placeholder {
+.form-control::placeholder,
+textarea.form-control::placeholder {
     color: bisque;
     font-family: Helvetica, monospace;
-    position: absolute;
+    position: relative;
     left: 0;
-    bottom: 0;
-    transition: left 0.4s ease;
+    transition: left  0.4s ease-in-out;
+    -webkit-transition: left 0.4s ease-in-out;
+    -moz-transition: left 0.4s ease-in-out;
 }
+
 
 
 .form-control:focus::placeholder {
-    position: absolute;
+    position: relative;
     left: 60%;
 }
 
@@ -173,7 +177,4 @@ form .submit:active {
         width: 60%;
     }
 
-    .form-control:focus::placeholder {
-        left: 50%;
-    }
 }
